--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -955,7 +955,7 @@ main {
 
 .project-img {
   position: relative;
-  width: 100px;
+  width: 100%;
   height: 200px;
   border-radius: 16px;
   overflow: cover;
